# ocaml-interval

./: .gitignore  .merlin  .travis.yml  CHANGES.md  Makefile  README.md  appveyor.yml  chcw.c  dune-project  dune-workspace.dev  fpu.ml  fpu.mli  fpu_rename.mli  fpu_rename_all.mli  interval.descr  interval.ml  interval.mli  interval.opam  interval_base.descr  interval_base.opam  interval_crlibm.descr  interval_crlibm.opam  interval_intel.descr  interval_intel.opam
.github/workflows/: main.yml
EXAMPLES/: Makefile  example.ml  precision.ml
EXAMPLES/B_AND_B/: Makefile  b_and_b.ml  main.ml
TESTS/: Makefile  tests.ml
base/: interval_base.ml  interval_base.mli
config/: discover.ml  dispatch.ml  dune  jbuild
crlibm/: interval_crlibm.ml  jbuild
doc/: index.html
doc/interval/: fpu.odoc  fpu_rename.odoc  fpu_rename_all.odoc  index-generated.mld  index.html  interval.odoc  interval__U.odoc  page-index.odoc
doc/interval/Fpu/: index.html
doc/interval/Fpu/High/: index.html
doc/interval/Fpu/High/U/: index.html
doc/interval/Fpu/Low/: index.html
doc/interval/Fpu/Low/U/: index.html
doc/interval/Fpu/Rename/: index.html
doc/interval/Fpu/Rename_all/: index.html
doc/interval/Fpu_rename/: index.html
doc/interval/Fpu_rename_all/: index.html
doc/interval/Interval/: index.html
doc/interval/Interval/I/: index.html
doc/interval/Interval/I/Arr/: index.html
doc/interval/Interval/I/U/: index.html
doc/interval/Interval__U/: index.html
doc/interval/Interval_top/: index.html
doc/interval_base/: index.html
doc/interval_base/Interval/: index.html
doc/interval_base/Interval/High/: index.html
doc/interval_base/Interval/I/: index.html
doc/interval_base/Interval/I/U/: index.html
doc/interval_base/Interval/Low/: index.html
doc/interval_base/Interval/module-type-DIRECTED/: index.html
doc/interval_base/Interval/module-type-T/: index.html
doc/interval_base/Interval__/: index.html
doc/interval_base/Interval__/Interval__U/: index.html
doc/interval_base/Interval__Interval__U/: index.html
doc/interval_base/Interval_base/: index.html
doc/interval_base/Interval_base/I/: index.html
doc/interval_base/Interval_base/I/Precision/: index.html
doc/interval_base/Interval_base/I/U/: index.html
doc/interval_base/Interval_base/RoundDown/: index.html
doc/interval_base/Interval_base/RoundUp/: index.html
doc/interval_base/Interval_base/module-type-DIRECTED/: index.html
doc/interval_base/Interval_base/module-type-T/: index.html
doc/interval_crlibm/: index.html
doc/interval_crlibm/Interval_crlibm/: index.html
doc/interval_crlibm/Interval_crlibm/High/: index.html
doc/interval_crlibm/Interval_crlibm/I/: index.html
doc/interval_crlibm/Interval_crlibm/I/Precision/: index.html
doc/interval_crlibm/Interval_crlibm/I/U/: index.html
doc/interval_crlibm/Interval_crlibm/Low/: index.html
doc/interval_crlibm/Interval_crlibm/RoundDown/: index.html
doc/interval_crlibm/Interval_crlibm/RoundUp/: index.html
doc/interval_crlibm/Interval_crlibm/module-type-DIRECTED/: index.html
doc/interval_crlibm/Interval_crlibm__/: index.html
doc/interval_crlibm/Interval_crlibm__/Generic/: index.html
doc/interval_crlibm/Interval_crlibm__Generic/: index.html
doc/interval_intel/: index.html
doc/interval_intel/Interval_intel/: index.html
doc/interval_intel/Interval_intel/Fpu/: index.html
doc/interval_intel/Interval_intel/Fpu/High/: index.html
doc/interval_intel/Interval_intel/Fpu/Low/: index.html
doc/interval_intel/Interval_intel/Fpu/Rename/: index.html
doc/interval_intel/Interval_intel/Fpu/Rename_all/: index.html
doc/interval_intel/Interval_intel/Fpu/RoundDown/: index.html
doc/interval_intel/Interval_intel/Fpu/RoundUp/: index.html
doc/interval_intel/Interval_intel/I/: index.html
doc/interval_intel/Interval_intel/I/Arr/: index.html
doc/interval_intel/Interval_intel/I/Precision/: index.html
doc/interval_intel/Interval_intel/I/U/: index.html
doc/interval_intel/Interval_intel__/: index.html
doc/interval_intel/Interval_intel__/Fpu/: index.html
doc/interval_intel/Interval_intel__/Fpu/High/: index.html
doc/interval_intel/Interval_intel__/Fpu/Low/: index.html
doc/interval_intel/Interval_intel__/Fpu/Rename/: index.html
doc/interval_intel/Interval_intel__/Fpu/Rename_all/: index.html
doc/interval_intel/Interval_intel__/Fpu_rename/: index.html
doc/interval_intel/Interval_intel__/Fpu_rename_all/: index.html
doc/interval_intel/Interval_intel__/Generic/: index.html
doc/interval_intel/Interval_intel__Fpu/: index.html
doc/interval_intel/Interval_intel__Fpu/High/: index.html
doc/interval_intel/Interval_intel__Fpu/Low/: index.html
doc/interval_intel/Interval_intel__Fpu/Rename/: index.html
doc/interval_intel/Interval_intel__Fpu/Rename_all/: index.html
doc/interval_intel/Interval_intel__Fpu_rename/: index.html
doc/interval_intel/Interval_intel__Fpu_rename_all/: index.html
doc/interval_intel/Interval_intel__Generic/: index.html
examples/: dune  example.ml  jbuild  precision.ml
examples/B_AND_B/: b_and_b.ml  b_and_b.mli  jbuild  main.ml
src/: fpu.ml  interval.ml  interval.mli  interval__U.mli  interval_stubs.c  jbuild
src-base/: dune  interval.ml  interval.mli  interval__U.ml  interval_base.h  interval_base.ml  interval_base.mli  interval_base_stubs.c  jbuild
src-crlibm/: dune  interval_crlibm.ml  interval_crlibm.mli  jbuild
src-intel/: dune  fpu.ml  fpu.mli  fpu_rename.ml  fpu_rename.mli  fpu_rename_all.ml  fpu_rename_all.mli  generic.ml  interval_intel.h  interval_intel.ml  interval_intel.mli  interval_stubs.c  jbuild
tests/: accuracy.ml  dune  jbuild  test_base.ml  test_crlibm.ml  test_intel.ml  tests.ml  tests_speed.ml
top/: dune  interval_top.ml
