opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: ["Jean-Marc Alliot <jean-marc.alliot@irit.fr>"
          "Jean-Baptiste Gotteland <gottelan@recherche.enac.fr>"
          "Christophe Troestler <Christophe.Troestler@umons.ac.be>"]
homepage: "https://github.com/Chris00/ocaml-interval"
dev-repo: "git+https://github.com/Chris00/ocaml-interval.git"
bug-reports: "https://github.com/Chris00/ocaml-interval/issues"
doc: "https://Chris00.github.io/ocaml-interval/doc"
license: "LGPL-3.0-only"
tags: ["interval" "science"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "interval_base" {= version}
  "interval_intel" {= version}
  "interval_crlibm" {= version}
]
synopsis: "An interval arithmetic library for OCaml (meta package)"
