opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: ["Jean-Marc Alliot <jean-marc.alliot@irit.fr>"
          "Jean-Baptiste Gotteland <gottelan@recherche.enac.fr>"
          "Christophe Troestler <Christophe.Troestler@umons.ac.be>"]
homepage: "https://github.com/Chris00/ocaml-interval"
dev-repo: "git+https://github.com/Chris00/ocaml-interval.git"
bug-reports: "https://github.com/Chris00/ocaml-interval/issues"
doc: "https://Chris00.github.io/ocaml-interval/doc"
license: "LGPL-3.0"
tags: ["interval" "science"]
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
  [ "jbuilder" "build" "@doc" ] {with-doc}
]
depends: [
  "ocaml" {>= "3.12"}
  "interval_base"
  "jbuilder" {build}
  "crlibm"
]
