(library
 (name        interval_base)
 (public_name interval_base)
 (install_c_headers interval_base)
 (ocamlopt_flags :standard -no-float-const-prop)
 (foreign_stubs (language c)
  (names interval_base_stubs)
  (flags     :standard (:include c_flags.sexp)))
 (synopsis "Interval arithmetic library (base)"))

(rule
 (targets c_flags.sexp)
 (action  (run %{exe:../config/discover.exe})))
