(library
 (name        interval_intel)
 (public_name interval_intel)
 (ocamlopt_flags :standard -no-float-const-prop)
 (c_names     interval_stubs)
 (libraries   interval_base)
 (synopsis  "Interval arithmetic library for Intel processors"))

(rule
 (targets interval_base.h)
 (deps    ../src-base/interval_base.h)
 (action  (copy %{deps} %{targets})))
