(executable
 (name    tests)
 (modules tests)
 (libraries interval_intel unix))

(executable
 (name    accuracy)
 (modules accuracy)
 (libraries interval_intel interval_crlibm))

(alias
 (name runtest)
 (package interval)
 (deps tests.exe)
 ; Do not run "tests.exe" (too long), use "make tests" for that.
 (action (run %{exe:accuracy.exe})))

(executable
 (name      test_base)
 (modules   test_base)
 (libraries interval_base))

(alias
 (name runtest)
 (package interval_base)
 (action (run %{exe:test_base.exe})))

(executable
 (name      test_crlibm)
 (modules   test_crlibm)
 (libraries interval_crlibm))

(alias
 (name runtest)
 (package interval_crlibm)
 (action (run %{exe:test_crlibm.exe})))

(executable
 (name      graphs)
 (modules   graphs)
 (libraries interval_crlibm))

(alias
 (name runtest)
 (package interval_crlibm)
 (action (run %{exe:graphs.exe})))

(rule
 (targets graphs.pdf)
 (deps    graphs.tex)
 (action  (progn
           (run %{exe:graphs.exe})
           (run pdflatex -interaction=nonstopmode graphs.tex))))

(alias
 (name graphs)
 (deps graphs.pdf))
