(executable
 (name    tests)
 (modules tests)
 (ocamlopt_flags :standard -no-float-const-prop)
 (libraries interval_intel interval_crlibm unix))

(executable
 (name    accuracy)
 (modules accuracy)
 (ocamlopt_flags :standard -no-float-const-prop)
 (libraries interval_intel interval_crlibm))

(rule
 ; Do not run "tests.exe" (too long), use "make tests" for that.
 (action (run %{exe:accuracy.exe}))
 (package interval)
 (deps tests.exe)
 (alias runtest))

; Do not run "tests_speed.exe" (slow), use "make test-speed" for that.
(executable
 (name      tests_speed)
 (modules   tests_speed)
 (libraries interval_intel interval_crlibm unix))

(executable
 (name      test_base)
 (modules   test_base)
 (ocamlopt_flags :standard -no-float-const-prop)
 (libraries interval_base))

(rule
 (action (run %{exe:test_base.exe}))
 (package interval_base)
 (alias runtest))

(executable
 (name      test_intel)
 (modules   test_intel)
 (ocamlopt_flags :standard -no-float-const-prop)
 (libraries interval_intel))

(rule
 (action (run %{exe:test_intel.exe}))
 (package interval_intel)
 (alias runtest))

(executable
 (name      test_crlibm)
 (modules   test_crlibm)
 (ocamlopt_flags :standard -no-float-const-prop)
 (libraries interval_crlibm))

(rule
 (action (run %{exe:test_crlibm.exe}))
 (package interval_crlibm)
 (alias runtest))

(executable
 (name      graphs)
 (modules   graphs)
 (ocamlopt_flags :standard -no-float-const-prop)
 (libraries interval_crlibm))

(rule
 (action (run %{exe:graphs.exe}))
 (package interval_crlibm)
 (alias runtest))

(rule
 (targets graphs.pdf)
 (deps    graphs.tex)
 (action  (progn
           (run %{exe:graphs.exe})
           (run pdflatex -interaction=nonstopmode graphs.tex))))
